--- a/Abstract-Classes/Abstract-Classes.csproj
+++ b/Abstract-Classes/Abstract-Classes.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EliteMarathon.cs" />
+    <Compile Include="EliteRunner.cs" />
+    <Compile Include="EliteSprinter.cs" />
+    <Compile Include="Marathon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runner.cs" />
+    <Compile Include="Sprinter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
